Remove ImageSerializer in favor of ImageIO.